dataset1235/2025-2/805158916/users/2430372732/executions/2118643220_299355888.log
== RUN (2025-09-01 14:35:41)
-- CODE: 
print = 7 / 2

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
None
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
None
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
None
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
None
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
None
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:48)
-- CODE: 
ti = 30
vd = 50


Dias = float(input("Dias"))

soma = float(50 * Dias + ti)

somatx = float (soma * 1.18)
print (somatx)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
Dias330.4
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
Dias566.4
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
Dias448.4
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
Dias94.39999999999999
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:43)
-- CODE: 
ti = 30
vd = 50


Dias = float(input("Dias"))

soma = float(50 * Dias + ti)

somatx = float (soma * 1.18)
print (somatx)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
Dias330.4
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
Dias566.4
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
Dias448.4
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
Dias94.39999999999999
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:25)
-- CODE: 
a = 7 / 2
print (round(a,4))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
3.5
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
3.5
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
3.5
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
3.5
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:28)
-- CODE: 
a = 7 / 2
print (round(a,4))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
3.5
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
3.5
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
3.5
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
3.5
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:15)
-- CODE: 
a = 7 / 2
print round(a,4)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
-- ERROR:
File "XXXX", line 2
    print round(a,4)
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 14:36:02)
-- CODE: 
a = 7 / 2
print (a)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
3.5
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
3.5
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
3.5
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
3.5
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
3.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 14:43:45)
-- CODE: 
ti = 30
vd = 50


Dias = float(input("Dias"))

soma = float(50 * Dias + ti)

somatx = float (soma * 1.18)
print (somatx)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
330.4
---- user output:
Dias330.4
-- TEST CASE 2:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- TEST CASE 3:
---- input:
9
---- correct output:
566.4
---- user output:
Dias566.4
-- TEST CASE 4:
---- input:
7
---- correct output:
448.4
---- user output:
Dias448.4
-- TEST CASE 5:
---- input:
1
---- correct output:
94.4
---- user output:
Dias94.39999999999999
-- TEST CASE 6:
---- input:
4
---- correct output:
271.4
---- user output:
Dias271.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
